test/types/tuple/bradc/tupleTypeBackwards.chpl
var x: real*2;

writeln("x is: ", x);
